// PayScale High-Throughput Transaction Processing Engine (HTTPE)
// Entity-Relationship Data Model (dbdiagram.io syntax)

Table users {
  user_id UUID [pk]
  full_name varchar(255) [not null]
  email varchar(255) [unique, not null]
  phone_number varchar(20) [unique, not null]
  kyc_status varchar(50) [not null, default: 'PENDING']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table accounts {
  account_id UUID [pk]
  user_id UUID [ref: > users.user_id, not null]
  account_type varchar(50) [not null]
  currency char(3) [not null, default: 'INR']
  available_balance numeric(18,4) [not null, default: 0.0000]
  ledger_balance numeric(18,4) [not null, default: 0.0000]
  version bigint [not null, default: 1]
  status varchar(50) [not null, default: 'ACTIVE']
  tier varchar(50) [not null, default: 'BASIC']
  shard_key integer [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (shard_key, account_id) [name: 'idx_accounts_shard_routing']
    user_id [name: 'idx_accounts_user_lookup']
  }
}

Table transactions {
  transaction_id UUID [pk]
  idempotency_key varchar(128) [unique, not null]
  transaction_type varchar(50) [not null]
  source_account_id UUID [ref: > accounts.account_id]
  destination_account_id UUID [ref: > accounts.account_id]
  amount numeric(18,4) [not null]
  status varchar(50) [not null]
  saga_id UUID [not null]
  failure_reason varchar(500)
  created_at timestamptz [not null, default: `now()`]
  completed_at timestamptz
  metadata jsonb

  indexes {
    idempotency_key [name: 'idx_txn_idempotency']
    saga_id [name: 'idx_txn_saga']
    (source_account_id, created_at) [name: 'idx_txn_source_history']
    (destination_account_id, created_at) [name: 'idx_txn_dest_history']
  }
}

Table ledger_entries {
  entry_id UUID [pk]
  transaction_id UUID [ref: > transactions.transaction_id, not null]
  account_id UUID [ref: > accounts.account_id, not null]
  entry_type varchar(20) [not null] // DEBIT or CREDIT
  amount numeric(18,4) [not null]
  balance_after numeric(18,4) [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (account_id, created_at) [name: 'idx_ledger_account_time']
    transaction_id [name: 'idx_ledger_txn']
  }
}

Table transaction_events {
  event_id UUID [pk]
  transaction_id UUID [ref: > transactions.transaction_id, not null]
  saga_id UUID [not null]
  from_state varchar(50) [not null]
  to_state varchar(50) [not null]
  payload jsonb
  created_at timestamptz [not null, default: `now()`]

  indexes {
    saga_id [name: 'idx_events_saga']
  }
}

Table fraud_rules {
  rule_id UUID [pk]
  rule_name varchar(100) [not null]
  rule_type varchar(50) [not null]
  threshold_value numeric(18,4) [not null]
  action varchar(50) [not null]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
}

Table merchant_settlements {
  settlement_id UUID [pk]
  merchant_account_id UUID [ref: > accounts.account_id, not null]
  batch_id UUID [not null]
  gross_amount numeric(18,4) [not null]
  mdr_fee numeric(18,4) [not null]
  net_amount numeric(18,4) [not null]
  status varchar(50) [not null]
  bank_utr varchar(100)
  settled_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (merchant_account_id, created_at) [name: 'idx_settlement_merchant']
    batch_id [name: 'idx_settlement_batch']
  }
}

Table notification_log {
  notification_id UUID [pk]
  transaction_id UUID [ref: > transactions.transaction_id, not null]
  recipient_id UUID [not null]
  channel varchar(20) [not null] // SMS, PUSH, WEBHOOK
  status varchar(50) [not null]
  retry_count integer [not null, default: 0]
  sent_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (transaction_id, channel) [name: 'idx_notify_txn_channel']
  }
}